[project]
name = "multi-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag2[websockets]>=0.9.9",
    "autogen>=0.9.9",
    "fastapi>=0.117.1",
    "google-search-results>=2.4.2",
    "openai>=1.109.0",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
    "uvicorn>=0.37.0",
]
